--- a/card.html
+++ b/card.html
@@ -4,6 +4,7 @@
      <head>
           <meta charset="UTF-8>
           <title>cartao</title>
+          <link rel="stylesheet"href="card.css"
     </head>
 <body>
       <div class="card">
